<?xml version="1.0"?>
<package format="2">
  <name>gpio_control</name>
  <version>0.0.0</version>
  <description>The gpio_control package provides means of using the GPIO pins on a Raspberry Pi.</description>

  <maintainer email="bryce@todo.todo">Bryce Elvin</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
 
  <export>

  </export>
</package>
